<resources>
    <string name="app_name">hotel</string>
    <string name="Logo">Hotel logo</string>
    <string name="IngresoUsuario">"Usuario "</string>
    <string name="Fondo">Background image</string>
    <string name="Nombre">Serena light Hotel</string>
    <string name="IngresoPassword">Password</string>
    <string name="Ingresar">Get into</string>
    <string name="Registrar">Register</string>
    <string name="GuardarRegistro" >Finish registration</string>
    <string name="Nombre_huesped" >Name</string>
    <string name="Apellido_huesped" >Last name</string>
    <string name="NumIdentidad_huesped" >Identificacion Number</string>
    <string name="Telefono" >Phone</string>
    <string name="Email_huesoed" >E-Mail</string>
    <string name="Usuario_huesped" >Create an user</string>
    <string name="Passwor_huesped" >Create a password</string>
    <string name="Titulo_registro" >Enter your information to register</string>
    <string name="Titulo_reserva" >Make your reservation below</string>
    <string name="ElegirInicio" >choose the first date</string>
    <string name="ElegirFinal" >Choose the final date</string>
    <string name="ReservaFinal" >Finish reservation</string>
    <string name="TituloRecibo" >Here is your check</string>
    <string name="fechainicio" >Inicial date</string>
    <string name="fechafinal" >Final date</string>
    <string name="graciastext" >Thank for your visit our humid areas</string>
    <string name="Close" >Cerrar</string>
    <string name="textozonashuemdas" >Choose the wet area where you want to reserve</string>
    <string name="SpaText" >massage room</string>
    <string name="PiscinaText" >Swimming Pool</string>
    <string name="SaunaText" >Sauna</string>
    <string name="TurcoText" >Turco</string>
</resources>