<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_8706120_rm222batch5_mind_01"
    tools:context=".MainActivity">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="423dp"
        android:layout_height="132dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

        <ImageView
            android:id="@+id/Imagen_logo1"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Logo"
            app:srcCompat="@drawable/_433039_2369398"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/NombreHotel1"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/Nombre"
            android:fontFamily="@font/black_and_white_picture"
            android:text="@string/Nombre"
            android:textColor="#0C3168"
            android:textSize="60sp"
            tools:ignore="TextSizeCheck,VisualLintLocaleText" />
    </TableRow>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="379dp"
        android:layout_height="245dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="34dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <EditText
            android:id="@+id/UsuarioHuesped"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="text"
            android:text="@string/IngresoUsuario"
            android:textSize="24sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/InstruccionInPassword"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/IngresoPassword"
            android:fontFamily="monospace"
            android:text="@string/IngresoPassword"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/PasswordHuesped"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:contentDescription="@string/IngresoPassword"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="textPassword"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck,EditableContentDescCheck,LabelFor,SpeakableTextPresentCheck,VisualLintBounds" />

    </LinearLayout>


    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="250dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:background="#1A237E"
        android:contentDescription="@string/Ingresar"
        android:fontFamily="monospace"
        android:onClick="Ingreso"
        android:text="@string/Ingresar"
        android:textColor="#EAEAEA"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.666" />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="250dp"
        android:layout_height="61dp"
        android:layout_marginBottom="64dp"
        android:background="#1A237E"
        android:fontFamily="monospace"
        android:onClick="irregistro"
        android:text="@string/Registrar"
        android:textColor="#EAEAEA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.921" />

</androidx.constraintlayout.widget.ConstraintLayout>