<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_8706120_rm222batch5_mind_01"
    tools:context=".MainActivity3">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="423dp"
        android:layout_height="132dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

        <ImageView
            android:id="@+id/Imagen_logo1"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Logo"
            app:srcCompat="@drawable/_433039_2369398"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/NombreHotel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Nombre"
                android:fontFamily="@font/black_and_white_picture"
                android:text="@string/Nombre"
                android:textColor="#0C3168"
                android:textSize="40sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/TituloReserva"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:contentDescription="@string/Titulo_reserva"
                android:fontFamily="@font/black_and_white_picture"
                android:text="@string/Titulo_reserva"
                android:textColor="#0C1E39"
                android:textSize="34sp" />
        </LinearLayout>

    </TableRow>

    <LinearLayout
        android:layout_width="339dp"
        android:layout_height="457dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <EditText
            android:id="@+id/UsuarioHuesped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="text"
            android:text="@string/IngresoUsuario"
            android:textSize="24sp"
            tools:ignore="Autofill,LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/InstruccionNumeroIdentificacion"
                android:layout_width="56dp"
                android:layout_height="69dp"
                android:layout_weight="1"
                android:contentDescription="@string/NumIdentidad_huesped"
                android:text="@string/NumIdentidad_huesped"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/IngresoNumIdentidadHuesped"
                android:layout_width="183dp"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:contentDescription="@string/NumIdentidad_huesped"
                android:ems="10"
                android:fontFamily="monospace"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck,EditableContentDescCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>